--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="images/presents.jpeg">
 
       <!-- Highlighted area -->
-      <button onclick="presentVideo(1)" class="present-1">
+      <button onclick="presentVideo(1)" class="present present-1">
         <span>Open Me</span>
       </button>
     </div>
