Added intro audio

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <video autoplay muted loop id="welcome-video">
-        <source src="videos/welcome.mp4" type="video/mp4">
-      </video>
+      <img id="welcome-video" src="images/welcome_picture.jpeg"><img>
         
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
