Show new picture and play audio after clicking the first present, then go back to the present image page

--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
 
     <!-- Game screen -->
     <div id="game-screen" class="screen">
-      <img src="images/presents.jpeg">
+      <img src="images/presents.jpeg" id="presents">
+      <img src="images/Noelle_with_elves/telling_a_story.jpeg" id="present-1-picture">
 
       <!-- Highlighted area -->
       <button onclick="presentVideo(1)" class="present present-1">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(2)" class="present present-2">
         <span>Open Me</span>
       </button>
     </div>
