--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     <!-- Game screen -->
     <div id="game-screen" class="screen">
       <img src="images/presents.jpeg" id="presents">
-      <img src="images/Noelle_with_elves/telling_a_story.jpeg" id="present-1-picture">
+      <img src="images/elves_in_class.jpeg" id="intro-picture" class="present-picture">
+      <img src="images/Noelle_with_elves/telling_a_story.jpeg" id="present-1-picture" class="present-picture">
+      <img src="images/Noelle_with_elves/gingerbread_house.jpeg" id="present-2-picture" class="present-picture">
 
       <!-- Highlighted area -->
-      <button onclick="presentVideo(1)" class="present present-1">
+      <button onclick="presentVideo(1)" class="present-button" id="present-1-button">
         <span>Open Me</span>
       </button>
 
-      <button onclick="presentVideo(2)" class="present present-2">
+      <button onclick="presentVideo(2)" class="present-button" id="present-2-button" style="display:none;">
         <span>Open Me</span>
       </button>
     </div>
