Add a skip button for the audio

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <img src="images/Noelle_with_elves/telling_a_story.jpeg" id="present-1-picture" class="present-picture">
       <img src="images/Noelle_with_elves/gingerbread_house.jpeg" id="present-2-picture" class="present-picture">
 
+      <!-- Skip button -->
+      <button id="skip-button" onclick="skipAudio()">Skip</button>
+
       <!-- Highlighted area -->
       <button onclick="presentVideo(1)" class="present-button" id="present-1-button">
         <span>Open Me</span>
