--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="game-screen" class="screen">
       <img src="images/presents.jpeg" id="presents">
       <img src="images/elves_in_class.jpeg" id="intro-picture" class="present-picture">
-      <img src="images/noelle_with_elves/telling_a_story.jpeg" id="present-1-picture" class="present-picture">
-      <img src="images/noelle_with_elves/gingerbread_house.jpeg" id="present-2-picture" class="present-picture">
+      <img src="images/noelle/story.jpeg" id="present-1-picture" class="present-picture">
+      <img src="images/noelle/gingerbread.jpeg" id="present-2-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
         <div class="popup-content">
