--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img id="welcome-video" src="images/welcome_picture.jpeg"><img>
+      <!-- <img id="welcome-video" src="images/welcome_picture.jpeg"><img> -->
+      <img id="welcome-video" src="welcome.jpg"><img>
+
         
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
