use jpg instead of jpeg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
       <!-- <img id="welcome-video" src="images/welcome_picture.jpeg"><img> -->
-      <img id="welcome-video" src="welcome.jpg"><img>
+      <img id="welcome-video" src="images/welcome-picture.jpg"><img>
 
         
       <div class="content">
