--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img id="welcome-video" src="images/welcome_picture.jpg"><img>
+      <img id="welcome-video" src="welcome_picture.jpeg"><img>
       
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
@@ -28,10 +28,10 @@
 
     <!-- Game screen -->
     <div id="game-screen" class="screen">
-      <img src="images/presents.jpg" id="presents">
-      <img src="images/elves_in_class.jpg" id="intro-picture" class="present-picture">
-      <img src="images/noelle/story.jpg" id="present-1-picture" class="present-picture">
-      <img src="images/noelle/gingerbread.jpg" id="present-2-picture" class="present-picture">
+      <img src="presents.jpeg" id="presents">
+      <img src="class.jpeg" id="intro-picture" class="present-picture">
+      <img src="story.jpeg" id="present-1-picture" class="present-picture">
+      <img src="gingerbread.jpeg" id="present-2-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
         <div class="popup-content">
