--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img id="welcome-video" src="welcome_picture_copy.jpg"><img>
+      <img id="welcome-video" src="welcome.jpg"><img>
       
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
