--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img id="welcome-video" src="welcome.JPG"><img>
+      <img src="welcome.JPG" id="welcome-video" >
+      <!-- <img src="slideshow_pictures/picture11.jpeg" style="width:35%"> -->
+
       
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
