--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img src="welcome.JPG" id="welcome-video" >
+      <img src="welcome_picture.jpeg">
       <!-- <img src="slideshow_pictures/picture11.jpeg" style="width:35%"> -->
 
       
