--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img src="welcome_picture.jpeg">
-      <!-- <img src="slideshow_pictures/picture11.jpeg" style="width:35%"> -->
-
+      <img src="images/welcome_picture.jpeg" id="welcome-video" >
       
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
@@ -30,10 +28,10 @@
 
     <!-- Game screen -->
     <div id="game-screen" class="screen">
-      <img src="presents.jpeg" id="presents">
-      <img src="class.jpeg" id="intro-picture" class="present-picture">
-      <img src="story.jpeg" id="present-1-picture" class="present-picture">
-      <img src="gingerbread.jpeg" id="present-2-picture" class="present-picture">
+      <img src="images/presents.jpeg" id="presents">
+      <img src="images/class.jpeg" id="intro-picture" class="present-picture">
+      <img src="images/story.jpeg" id="present-1-picture" class="present-picture">
+      <img src="images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
         <div class="popup-content">
