--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elf Crimes: Find the Fake Present</title>
-    
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+
+</head>
+<body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
       <img src="images/welcome_picture.jpeg" id="welcome-video" >
@@ -32,6 +32,13 @@
       <img src="images/class.jpeg" id="intro-picture" class="present-picture">
       <img src="images/story.jpeg" id="present-1-picture" class="present-picture">
       <img src="images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
+      <img src="images/skating.jpeg" id="present-3-picture" class="present-picture">
+      <img src="images/hot_cocoa.jpeg" id="present-4-picture" class="present-picture">
+      <img src="images/snowman.jpeg" id="present-5-picture" class="present-picture">
+      <img src="images/cookies.jpeg" id="present-6-picture" class="present-picture">
+      <img src="images/tree.jpeg" id="present-7-picture" class="present-picture">
+      <img src="images/coal.jpeg" id="coal-picture" class="present-picture">
+      <img src="images/win_picture.jpeg" id="win-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
         <div class="popup-content">
@@ -44,12 +51,36 @@
       <!-- Skip button -->
       <button id="skip-button" onclick="skipAudio()">Skip</button>
 
-      <!-- Highlighted area -->
+      <!-- Open me boxes -->
       <button onclick="presentVideo(1)" class="present-button" id="present-1-button">
         <span>Open Me</span>
       </button>
 
       <button onclick="presentVideo(2)" class="present-button" id="present-2-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(3)" class="present-button" id="present-3-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(4)" class="present-button" id="present-4-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(5)" class="present-button" id="present-5-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(6)" class="present-button" id="present-6-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(7)" class="present-button" id="present-7-button" style="display:none;">
+        <span>Open Me</span>
+      </button>
+
+      <button onclick="presentVideo(8)" class="present-button" id="present-8-button" style="display:none;">
         <span>Open Me</span>
       </button>
     </div>
