Add gold border to quiz questions

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
       <img src="images/win_picture.jpeg" id="win-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
-        <div class="popup-content">
-          <p id="question-text"></p>
-          <form id="options-form"></form>
-          <button class="submit-answer" onclick="submitAnswer()">Submit</button>
+        <div class="border-container">
+          <div class="popup-content">
+            <p id="question-text"></p>
+            <form id="options-form"></form>
+            <button class="submit-answer" onclick="submitAnswer()">Submit</button>
+            <div id="feedback-container"></div>
+          </div>
         </div>
       </div>
 
