--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Welcome screen -->
     <div id="welcome-screen" class="screen">
-      <img src="./images/welcome_picture.jpeg" id="welcome-video" >
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/welcome_picture.jpeg" id="welcome-video" >
       
       <div class="content">
         <h1 class="welcome-title">Elf Crimes: Find the Fake Present</h1>
@@ -28,17 +28,17 @@
 
     <!-- Game screen -->
     <div id="game-screen" class="screen">
-      <img src="./images/presents.jpeg" id="presents">
-      <img src="./images/class.jpeg" id="intro-picture" class="present-picture">
-      <img src="./images/story.jpeg" id="present-1-picture" class="present-picture">
-      <img src="./images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
-      <img src="./images/skating.jpeg" id="present-3-picture" class="present-picture">
-      <img src="./images/hot_cocoa.jpeg" id="present-4-picture" class="present-picture">
-      <img src="./images/snowman.jpeg" id="present-5-picture" class="present-picture">
-      <img src="./images/cookies.jpeg" id="present-6-picture" class="present-picture">
-      <img src="./images/tree.jpeg" id="present-7-picture" class="present-picture">
-      <img src="./images/coal.jpeg" id="coal-picture" class="present-picture">
-      <img src="./images/win_picture.jpeg" id="win-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/presents.jpeg" id="presents">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/class.jpeg" id="intro-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/story.jpeg" id="present-1-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/skating.jpeg" id="present-3-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/hot_cocoa.jpeg" id="present-4-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/snowman.jpeg" id="present-5-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/cookies.jpeg" id="present-6-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/tree.jpeg" id="present-7-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/coal.jpeg" id="coal-picture" class="present-picture">
+      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/win_picture.jpeg" id="win-picture" class="present-picture">
 
       <div id="quiz-popup" class="popup">
         <div class="border-container">
