--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
 
     <!-- Game screen -->
     <div id="game-screen" class="screen">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/presents.jpeg" id="presents">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/class.jpeg" id="intro-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/story.jpeg" id="present-1-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/skating.jpeg" id="present-3-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/hot_cocoa.jpeg" id="present-4-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/snowman.jpeg" id="present-5-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/cookies.jpeg" id="present-6-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/tree.jpeg" id="present-7-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/coal.jpeg" id="coal-picture" class="present-picture">
-      <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/win_picture.jpeg" id="win-picture" class="present-picture">
+      <div class="image-container">
+        <div class="black-rectangle"></div>
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/presents.jpeg" id="presents">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/class.jpeg" id="intro-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/story.jpeg" id="present-1-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/gingerbread.jpeg" id="present-2-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/skating.jpeg" id="present-3-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/hot_cocoa.jpeg" id="present-4-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/snowman.jpeg" id="present-5-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/cookies.jpeg" id="present-6-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/tree.jpeg" id="present-7-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/coal.jpeg" id="coal-picture" class="present-picture">
+        <img src="https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/win_picture.jpeg" id="win-picture" class="present-picture">
+      </div>
 
       <div id="quiz-popup" class="popup">
         <div class="border-container">
